--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.15.3",
     "peer": "^1.0.2",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
