--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
   "workbench.colorCustomizations": {
-    "titleBar.activeBackground": "#ce2709",
+    "titleBar.activeBackground": "#000000",
     "titleBar.activeForeground": "#ffffff",
-    "activityBar.background": "#ce2709",
+    "activityBar.background": "#000000",
     "activityBar.foreground": "#ffffff",
-    "statusBar.background": "#ce2709",
+    "statusBar.background": "#000000",
     "statusBar.foreground": "#ffffff",
     "editor.lineHighlightBackground": "#004d4044",
     "list.activeSelectionBackground": "#00695c"
