--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "livekit-server-sdk": "^2.15.0",
     "morgan": "^1.10.1",
@@ -25,6 +26,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.15.3",
     "peer": "^1.0.2",
+    "peerjs": "^1.5.5",
     "socket.io": "^4.8.1",
     "uuid": "^13.0.0"
   },
